Adress Sonar Issue Feedback, Fix bug with Extension Panel not showing

--- a/visualization/app/codeCharta/ui/fileExtensionBar/fileExtensionBar.component.scss
+++ b/visualization/app/codeCharta/ui/fileExtensionBar/fileExtensionBar.component.scss
@@ -34,7 +34,6 @@ file-extension-bar-component {
 		height: 25px;
 		text-align: center;
 		background-color: white;
-		height: 0px;
 		overflow: hidden;
 		transition: all linear 0.2s;
 		outline: none;
